k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: automobile-backend-service
spec:
  selector:
    app: automobile-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
