k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: automobile-frontend-service
spec:
  selector:
    app: automobile-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
